# miso

./: Cargo.toml  README.md  a.spv  build.rs  test.glsl  tmp.txt
cfg/: render_graph.json
src/: algorithm.rs  common.rs  deletion_queue.rs  graph.rs  json.rs  lib.rs  lights.rs  managers.rs  pass.rs  pipeline.rs  reflection.rs  renderpass.rs  resource_manager.rs  subpass.rs  types.rs
src/slang/: stdfrag.slang  stdvert.slang
src/slang/include/: bindless.slang  handle.slang  lights.slang  meshi_bindless.slang  option.slang
src/slang/src/: stdfrag.slang  stdvert.slang
src/util/: deletion_queue.rs  mod.rs  resource_list.rs
test/hello_lights/: bin.rs
test/hello_triangle/: bin.rs
